<resources>
    <string name="app_name">Attendance</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cant_login">Can\'t log in?</string>
    <string name="reset_password">Reset your password.</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="create_new_password">Create new password</string>
    <string name="update_my_password">Update my password!</string>
    <string name="skip">Skip!</string>
    <string name="validate_data">Check your login data</string>
    <string name="password_error">Password is wrong or too short</string>
    <string name="email_error">Email isn\'t valid</string>
    <string name="username_or_password_wrong">Username or password didn\'t match</string>
    <string name="login_loading">We will let you in</string>
    <string name="teacher">teacher</string>
    <string name="not_allowed">You are not allowed to going in</string>
    <string name="not_match">Password did\'t match</string>
    <string name="general_error">Something went wrong</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="today_schedule">Today schedules</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="presece">Presence</string>
    <string name="listStudent">List students</string>
    <string name="overview">Overview</string>
    <string name="photos">Photos</string>
    <string name="save">Save</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="skip_title">Skip change password</string>
    <string name="skip_dialoge">Are you want to skip the change password? You can change the password later on profile page. (not implemented yet!)</string>
    <string name="detail">Details</string>
    <string name="cancel">Cancel</string>
    <string name="email_or_username">Username or e-mail</string>
    <string name="email_example">example@mail.com</string>
    <string name="password_example">******</string>
    <string name="welcome">Welcome,</string>
    <string name="username">username</string>
    <string name="score">Score</string>
    <string name="recent_schedule">Recent schedules</string>
    <string name="classes">Class</string>
    <string name="subject">Mata pelajaran</string>
    <string name="counter">Pertemuan</string>
    <string name="agenda">Agenda</string>
    <string name="phone">Phone</string>
    <string name="school">School</string>
    <string name="hadir">Hadir</string>
    <string name="hadir_short">H</string>
    <string name="sakit_short">S</string>
    <string name="izin_short">I</string>
    <string name="alpha_short">A</string>
    <string name="send_Data">Sending your data</string>
    <string name="data_not_complete">Data not complete!</string>
    <string name="izin">Izin</string>
    <string name="alpha">Alpha</string>
    <string name="sakit">Sakit</string>
    <string name="all_status">Hadir: %1$d, Izin: %2$d, Sakit: %3$d, Alfa: %4$d</string>
    <string name="nophotos">No photos attached!</string>
    <string name="total_student">Jumlah siswa:</string>
    <string name="desc_presence">H: Hadir, I: Izin, S: Sakit, A: Alfa</string>
    <string name="presence_all">Hadir semua</string>
    <string name="change_password">Change password</string>
    <string name="address">Address</string>
    <string name="please_wait">Please wait</string>
    <string name="input_email">Input your email</string>
    <string name="registered_email">Registered e-mail</string>
    <string name="email_not_found">Email not registered</string>
    <string name="logout">Log out</string>
    <string name="no_schedule">No Schedule(s)</string>
    <string name="no_history">No history(s)</string>
</resources>
