<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/small_padding"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ade Bambang Kurnia"
                android:textColor="@color/textColor"
                android:textSize="@dimen/small_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123123123"
                android:textColor="@color/textColor"
                android:textSize="@dimen/small_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/small_padding"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score"
               android:inputType="number"
                android:visibility="gone"
                android:textColor="@color/textColor"
                android:textSize="@dimen/small_title"
                android:id="@+id/etScore"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hadir"
                android:visibility="gone"
                android:textColor="@color/textColor"
                android:textSize="@dimen/small_title"
                android:id="@+id/status"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioAtt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hadir_short" />

                        <RadioButton
                            android:id="@+id/radioSakit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sakit_short" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioIzin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/izin_short" />

                        <RadioButton
                            android:id="@+id/radioAlpha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alpha_short" />
                    </LinearLayout>
                </LinearLayout>


            </RadioGroup>

            <!--<ImageView-->
                <!--android:id="@+id/check"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginEnd="@dimen/small_margin"-->
                <!--android:src="@drawable/ic_check" />-->

            <!--<ImageView-->
                <!--android:id="@+id/cancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_clear" />-->

            <!--<TextView-->
                <!--android:id="@+id/edit"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/cancel"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="@dimen/small_font"-->
                <!--android:visibility="gone" />-->
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>