<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/rounded_half_background"
            android:orientation="horizontal"
            android:paddingStart="@dimen/small_margin"
            android:paddingTop="@dimen/small_padding"
            android:paddingEnd="@dimen/margin"
            android:paddingBottom="@dimen/small_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_padding"
                android:src="@drawable/ic_watch_later_white"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/day"
                android:id="@+id/tvDayTime"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />
        </LinearLayout>

        <com.robertlevonyan.views.expandable.Expandable
            android:id="@+id/expandable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:exp_animateExpand="true"
            app:exp_headerBackgroundColor="@android:color/white">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--<RelativeLayout-->
            <!--android:id="@+id/content"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorPrimaryDark"-->
            <!--android:orientation="vertical">-->

            <RelativeLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_half_bottom">

                <LinearLayout
                    android:id="@+id/base_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/small_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="XII IPA 2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/textStartTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="11:00"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/dateSeparator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/small_padding"
                            android:layout_marginEnd="@dimen/small_padding"
                            android:text="-"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textEndTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12:00"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textTotalStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jumlah siswa: 50"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/textPertemuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pertemuan ke-50"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/textDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Sunday"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small"
                        android:visibility="gone" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnPresence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button_white"
                        android:paddingStart="@dimen/small_margin"
                        android:paddingTop="@dimen/small_padding_x"
                        android:paddingEnd="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_padding_x"
                        android:text="@string/presece"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/small_padding"
                        android:background="@drawable/rounded_button_accent"
                        android:paddingStart="@dimen/small_margin"
                        android:paddingTop="@dimen/small_padding_x"
                        android:paddingEnd="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_padding_x"
                        android:visibility="gone"
                        android:text="@string/score"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>
            <!--</RelativeLayout>-->


        </com.robertlevonyan.views.expandable.Expandable>
    </LinearLayout>
</android.support.v7.widget.CardView>